# kphotoalbum

./: .arcconfig  .clang-format  .dir-locals.el  .editorconfig  .emacs-dirvars  .flatpak-manifest.json  .git-svn-users  .gitattributes  .gitignore  .gitlab-ci.yml  .jkp-setup  .kde-ci.yml  .yamllint.yml  AdditionalInfo.txt  CHANGELOG.md  CHANGELOG.md.license  CHANGELOG.old  CHANGELOG.old.license  CMakeLists.txt  COPYING  COPYING.DOC  ChangeLog  ConvenienceLibs.cmake  Copyright_Header_Template.txt  Doxyfile  ExtraDesktop.sh  INSTALL  MISSING_FOR_KDE4  Mainpage.dox  Makefile.am  Messages.sh  README  README.Android  README.Android.md.license  README.experimental  README.md  README.md.license  REUSE.toml  TODO  ThumbnailRequest.cpp  (+246 more)
AnnotationDialog/: AnnotationDialog.cpp  AnnotationDialog.h  AreaTagSelectDialog.cpp  AreaTagSelectDialog.h  AreaTagSelectLineEdit.cpp  AreaTagSelectLineEdit.h  CMakeLists.txt  CompletableLineEdit.cpp  CompletableLineEdit.h  DateEdit.cpp  DateEdit.h  DescriptionEdit.cpp  DescriptionEdit.h  Dialog.cpp  Dialog.h  Editor.cpp  Editor.h  ImagePreview.cpp  ImagePreview.h  ImagePreviewWidget.cpp  ImagePreviewWidget.h  KDateEdit.cpp  KDateEdit.h  KeyClickListener.cpp  KeyClickListener.h  ListSelect.cpp  ListSelect.h  ListViewItemHider.cpp  ListViewItemHider.h  Logging.cpp  Logging.h  Makefile.am  Preview.cpp  ProposedFaceDialog.cpp  ProposedFaceDialog.h  ResizableFrame.cpp  ResizableFrame.h  ShortCutManager.cpp  ShortCutManager.h  ShowSelectionOnlyManager.cpp  (+3 more)
Browser/: AbstractCategoryModel.cpp  AbstractCategoryModel.h  Breadcrumb.cpp  Breadcrumb.h  BreadcrumbList.cpp  BreadcrumbList.h  Browser.cpp  Browser.h  BrowserAction.cpp  BrowserAction.h  BrowserItemFactory.cpp  BrowserItemFactory.h  BrowserPage.cpp  BrowserPage.h  BrowserWidget.cpp  BrowserWidget.h  CMakeLists.txt  CategoryModel.cpp  CategoryModel.h  CategoryPage.cpp  CategoryPage.h  CenteringIconView.cpp  CenteringIconView.h  ContentFolder.cpp  ContentFolder.h  ContentFolderAction.cpp  ContentFolderAction.h  ExifFolder.cpp  ExifFolder.h  FlatCategoryModel.cpp  FlatCategoryModel.h  Folder.cpp  Folder.h  GeoPositionPage.cpp  GeoPositionPage.h  ImageFolder.cpp  ImageFolder.h  ImageViewAction.cpp  ImageViewAction.h  ImageViewPage.cpp  (+22 more)
CategoryListView/: CMakeLists.txt  CheckDropItem.cpp  CheckDropItem.h  DragItemInfo.cpp  DragItemInfo.h  DragObject.cpp  DragObject.h  DragableListView.cpp  DragableListView.h  DragableTreeWidget.cpp  DragableTreeWidget.h  DraggableListView.cpp  DraggableListView.h  Logging.cpp  Logging.h  Makefile.am  documentation.h
DB/: AndCategoryMatcher.cpp  AndCategoryMatcher.h  CMakeLists.txt  Category.cpp  Category.h  CategoryCollection.cpp  CategoryCollection.h  CategoryItem.cpp  CategoryItem.h  CategoryMatcher.cpp  CategoryMatcher.h  CategoryPtr.cpp  CategoryPtr.h  ContainerCategoryMatcher.cpp  ContainerCategoryMatcher.h  DuplicatesFinder.cpp  DuplicatesFinder.h  ExactCategoryMatcher.cpp  ExactCategoryMatcher.h  ExifMode.cpp  ExifMode.h  FastDir.cpp  FastDir.h  FileInfo.cpp  FileInfo.h  FileName.cpp  FileName.h  FileNameList.cpp  FileNameList.h  GlobalCategorySortOrder.cpp  GlobalCategorySortOrder.h  GpsCoordinates.h  GroupCounter.cpp  GroupCounter.h  Id.cpp  Id.h  IdList.cpp  IdList.h  ImageDB.cpp  ImageDB.h  (+58 more)
Dialogs/: DeleteDialog.cpp  DeleteDialog.h  DeleteThumbnailsDialog.cpp  DeleteThumbnailsDialog.h  DonateDialog.cpp  DonateDialog.h  FeatureDialog.cpp  FeatureDialog.h  HtmlExportDialog.cpp  HtmlExportDialog.h  InvalidDateFinder.cpp  InvalidDateFinder.h  Makefile.am  TokenEditor.cpp  TokenEditor.h  WelcomeDialog.cpp  WelcomeDialog.h
Exif/: CMakeLists.txt  Database.cpp  Database.h  DatabaseElement.cpp  DatabaseElement.h  EXIF  ExifDataBase.cpp  ExifDataBase.h  ExifDialog.cpp  ExifInfo.cpp  ExifInfo.h  ExifSearchDialog.cpp  ExifSearchDialog.h  ExifSearchInfo.cpp  ExifSearchInfo.h  ExifTreeView.cpp  ExifTreeView.h  Grid.cpp  Grid.h  Info.cpp  Info.h  InfoDialog.cpp  InfoDialog.h  Logging.cpp  Logging.h  Makefile.am  MetaDataDisplay.cpp  MetaDataDisplay.h  RangeWidget.cpp  RangeWidget.h  ReReadDialog.cpp  ReReadDialog.h  SearchDialog.cpp  SearchDialog.h  SearchDialogSettings.cpp  SearchDialogSettings.h  SearchInfo.cpp  SearchInfo.h  SyncWidget.cpp  SyncWidget.h  (+12 more)
ImageManager/: AsyncLoader.cpp  AsyncLoader.h  CMakeLists.txt  CacheFileInfo.cpp  CacheFileInfo.h  CancelEvent.cpp  CancelEvent.h  ExtractOneVideoFrame.cpp  ExtractOneVideoFrame.h  ImageClient.cpp  ImageClient.h  ImageClientInterface.cpp  ImageClientInterface.h  ImageDecoder.cpp  ImageDecoder.h  ImageEvent.cpp  ImageEvent.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderThread.cpp  ImageLoaderThread.h  ImageManager.cpp  ImageManager.h  ImageRequest.cpp  ImageRequest.h  Logging.cpp  Logging.h  Makefile.am  Manager.cpp  Manager.h  PreloadRequest.cpp  PreloadRequest.h  RawImageDecoder.cpp  RawImageDecoder.h  RequestQueue.cpp  RequestQueue.h  StopAction.h  ThumbnailBuilder.cpp  ThumbnailBuilder.h  ThumbnailCache.cpp  (+21 more)
MainWindow/: AutoStackImages.cpp  AutoStackImages.h  BirthDatesDialog.cpp  BirthDatesDialog.h  BreadcrumbViewer.cpp  BreadcrumbViewer.h  CMakeLists.txt  CalendarPopup.cpp  CalendarPopup.h  CategoryImagePopup.cpp  CategoryImagePopup.h  CopyLinkEngine.cpp  CopyLinkEngine.h  CopyPopup.cpp  CopyPopup.h  DeleteDialog.cpp  DeleteDialog.h  DeleteThumbnailsDialog.cpp  DeleteThumbnailsDialog.h  DirtyIndicator.cpp  DirtyIndicator.h  DonateDialog.cpp  DonateDialog.h  DuplicateMatch.cpp  DuplicateMatch.h  DuplicateMerger.cpp  DuplicateMerger.h  DuplicateMerger.ui  ExternalPopup.cpp  ExternalPopup.h  FeatureDialog.cpp  FeatureDialog.h  HtmlExportDialog.cpp  HtmlExportDialog.h  ImageCounter.cpp  ImageCounter.h  InvalidDateFinder.cpp  InvalidDateFinder.h  Logging.cpp  Logging.h  (+27 more)
SQLDB/: CMakeLists.txt  ConfigFileHandler.cpp  ConfigFileHandler.h  Connection.h  ConnectionParameters.h  Cursor.cpp  Cursor.h  Database.cpp  Database.h  DatabaseAddress.cpp  DatabaseAddress.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseInitialization.cpp  DatabaseInitialization.h  DatabaseManager.h  (+60 more)
(+1335 files in other folders)
